# Digital-Twin-Framework-for-Industrial-Asset-Prognostics

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/data/: shap_global.json
artifacts/data/dashboard_export/: meta.json
artifacts/docs/: capstone_defense_package.md
notebooks/model/fd001/: model.onnx  weights.weights.h5
